# IonBeam

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Dockerfile.pygeoapi  LICENSE.txt  README.md  TODO.md  changelog.md  conda_env.yml  conftest.py  cron.sh  cron_acronet.sh  cron_ingest.sh  cron_logs_acronet.txt  cron_logs_meteotracker.txt  cron_meteotracker.sh  cron_reingest.sh  cron_sck.sh  example_secrets.yaml  initial_setup.sh  license-header.txt  license_header.txt  main.py  pyproject.toml  reingest.sh  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml
config/: MARS_keys.yaml  actions.yaml  canonical_variables.yaml  config.yaml  docker_config.yaml  example_secrets.yaml  get_raw_data.yaml  language.yaml.template  offline.yaml  schema
config/acronet/: MARS_keys.yaml  MARS_keys_per_track.yaml  actions.yaml  mappings.yaml
config/meteotracker/: MARS_keys.yaml  MARS_keys_per_track.yaml  actions.yaml  mappings.yaml
config/old/: WMO_variables.yaml  get_raw_data.yaml  meteotracker_offline.yaml  toms_test.yaml
cron/: acronet.sh  ingest.sh  meteotracker.sh  meteotracker_pass_2_hourly.sh  meteotracker_pass_3_daily.sh  sck.sh
data-sources/acronet/: config.example.yaml  pyproject.toml
data-sources/acronet/src/acronet/: app.py  client.py  models.py
data-sources/eumetnet/: config.example.yaml  pyproject.toml
data-sources/eumetnet/src/eumetnet/: app.py  client.py  models.py  netatmo_metadata.py  netatmo_processing.py  netatmo_qc_metadata.py
data-sources/ioncannon/: README.md  config.example.yaml  pyproject.toml
data-sources/ioncannon/src/ioncannon/: app.py  client.py  models.py
data-sources/meteotracker/: config.example.yaml  pyproject.toml
data-sources/meteotracker/src/meteotracker/: app.py  client.py  models.py
data-sources/sensor_community/: config.example.yaml  pyproject.toml
data-sources/sensor_community/src/sensor_community/: app.py  client.py  models.py
docs/: actions.md  api_docs.rst  architecture-diagram.mmd  architecture.rst  conf.py  data-flow-diagram.mmd  dataset-schema.rst  domain.rst  event-flow-diagram.mmd  index.md  index.rst  messaging-interface.rst
docs/adr/: index.rst
examples/: TAU.yaml  UCD.yaml  config.yaml  example1.yaml  example2.yaml  get_raw_data.yaml  iCHANGE_LL.yaml
exporters/ecmwf/: config.example.yaml  pyproject.toml
exporters/ecmwf/src/ecmwf/: __init__.py  app.py  exporter.py
exporters/ecmwf/tests/: test_exporter.py
exporters/pygeoapi/: README.md  config.example.yaml  pyproject.toml
exporters/pygeoapi/src/pygeoapi/: __init__.py  __main__.py  app.py  exporter.py  models.py
ionbeam/: __main__.py  config.example.yaml  containers.py  pyproject.toml
ionbeam-cli/: README.md  config.example.yaml  pyproject.toml
ionbeam-cli/src/ionbeam_cli/: __init__.py  __main__.py  amqp_utils.py  cli.py  config.py  utils.py
ionbeam-cli/src/ionbeam_cli/commands/: __init__.py  rebuild_dataset.py  reingest.py  trigger_data_source.py  trigger_exporters.py
ionbeam-client/: README.md  pyproject.toml
ionbeam-client/src/ionbeam_client/: __init__.py  amqp.py  arrow_tools.py  cache.py  client.py  config.py  constants.py  dataframe_tools.py  models.py  transfer.py
ionbeam-legacy-api/: config.example.yaml  pyproject.toml
ionbeam-legacy-api/src/legacy_api/: __init__.py  app.py  data_service.py  models.py  projection_service.py  routes.py
ionbeam/apps/: faststream.py
ionbeam/cli/: __main__.py  cli.py
ionbeam/core/: constants.py  containers.py  handler.py
ionbeam/legacy_api/: __init__.py  __main__.py  comparison_v2.py  data_service.py  models.py
ionbeam/models/: models.py
ionbeam/observability/: metrics.py
ionbeam/projections/ionbeam_legacy/: __init__.py  projection_service.py
ionbeam/projections/odb/: projection_service.py
ionbeam/projections/pygeoapi/: models.py  projection_service.py
ionbeam/scheduler/: source_scheduler.py
ionbeam/services/: dataset_aggregation.py  dataset_builder.py  dataset_coordinator.py  ingestion.py  models.py
ionbeam/sources/: acronet.py  ioncannon.py  meteotracker.py  netatmo.py  sensor_community.py
ionbeam/sources/metno/: batched_mqtt.py  config.py  netatmo.py  netatmo_archive.py  netatmo_mqtt.py  netatmo_processing.py  netatmo_qc_mqtt.py
ionbeam/src/ionbeam/: __init__.py  __main__.py  container.py
ionbeam/src/ionbeam/application/: __init__.py  factory.py
ionbeam/src/ionbeam/base/: __init__.py  handler.py
ionbeam/src/ionbeam/handlers/: __init__.py  dataset_builder_handler.py  dataset_coordinator_handler.py  ingestion_handler.py
ionbeam/src/ionbeam/models/: __init__.py  service_models.py
ionbeam/src/ionbeam/observability/: __init__.py  logging.py  protocols.py  testing.py  utils.py
ionbeam/src/ionbeam/observability/recorders/: __init__.py  builder.py  coordinator.py  health.py  ingestion.py  scheduler.py
ionbeam/src/ionbeam/scheduler/: __init__.py  models.py  source_scheduler.py
ionbeam/src/ionbeam/storage/: __init__.py  arrow_store.py  event_store.py  ingestion_record_store.py  ordered_queue.py  timeseries.py
ionbeam/storage/: arrow_store.py  event_store.py  ingestion_record_store.py  ordered_queue.py  timeseries.py
ionbeam/tests/: conftest.py
ionbeam/tests/handlers/: test_dataset_builder_handler.py  test_dataset_coordinator_handler.py  test_ingestion_handler.py
ionbeam/utilities/: arrow_tools.py  cache.py  dataframe_tools.py  parquet_tools.py
notebooks/: Untitled.ipynb  all_the_way_through.ipynb  debug_source.ipynb  expand_tree_to_lists.ipynb  test_aggregator.ipynb  test_meteotracker_metadata.py  test_sck.ipynb  test_sck_metadata.py  test_single_action.ipynb  test_time.ipynb
scripts/: delete_all_station_metadata.py  print_properties.py
test/: sensor-precision.md  test_actions.py
tests/: conftest.py  test_bufr_projection_service.py  test_dataset_aggregation_service.py  test_dataset_builder_service.py  test_dataset_coordinator_service.py  test_ingestion_service.py  test_odb_projection_service.py
tools/: db_modify.py  list_fdb.py
xds-config/: README.md
(+241 files in other folders)
