[project]
name = "ionbeam-monorepo"
version = "0.1.0"
description = "Ionbeam monorepo workspace"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "ionbeam-cli",
    "ionbeam-client",
    "ionbeam",
    "ionbeam-legacy-api",
    "data-sources/*",
    "exporters/*"
]

[tool.uv]
constraint-dependencies = [
    "click>=8.1.0",
    "pydantic>=2.11.0",
    "pandas>=2.2.3",
    "numpy>=2.2.0",
    "pyarrow>=19.0.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.3",
    "structlog>=25.4.0",
]

[tool.pytest.ini_options]
testpaths = [
    "ionbeam/tests",
    "ionbeam-client/tests",
    "exporters/ecmwf/tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
docs = [
    "sphinx>=8.2.3",
    "sphinxcontrib-mermaid>=1.1.0",
    "pydata-sphinx-theme>=0.16.1",
    "ionbeam-client",
]

[tool.uv.sources]
ionbeam-client = { workspace = true }
