[metadata]
name = obsproc
version = 0.0.1
author = ECMWF
author_email =
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The 3-Clause BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    pyodc
    requests
    oauthlib
    requests-oauthlib
    pyyaml
    munch
    Levenshtein
    tqdm

[options.extras_require]
dev =
    pytest
    black
    ruff
    flake8
    pre-commit
    isort
    responses
    # The following packages just add typing for Mypy
    pandas-stubs
    types-oauthlib
    types-requests
    munch-stubs
    types-oauthlib
    types-requests

[options.packages.find]
where = src
