[metadata]
name = ionbeam
version = 0.0.1
author = Tom Hodson (ECMWF)
author_email = thomas.hodson@ecmwf.int
description = A streaming library for IoT data.
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The 3-Clause BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    numexpr
    pyodc @ git+https://github.com/TomHodson/pyodc.git@test/string_hack
    pyaviso @ git+https://github.com/ecmwf/aviso.git@develop
    pyfdb @ git+https://github.com/ecmwf/pyfdb.git@develop
    requests
    oauthlib
    requests-oauthlib
    pyyaml
    munch
    Levenshtein
    tqdm
    argparse
    watchdog
    shapely
    pyyaml-include >= 1.4, < 2.0 # Todo: refactor code to support version 2
    bs4 # For sensor.community
    lxml
    pika
    rich
    pe
    findlibs
    sqlalchemy
    sqlalchemy_utils
    geoalchemy2

[options.extras_require]
dev =
    pytest
    black
    ruff
    flake8
    pre-commit
    isort
    responses
    # The following packages just add typing for Mypy
    pandas-stubs
    types-oauthlib
    types-requests
    munch-stubs
    types-requests

[options.packages.find]
where = src
