[project]
name = "ionbeam-legacy-api"
version = "0.1.0"
description = "IonBeam Legacy API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "duckdb>=1.1.3",
    "shapely>=2.0.6",
    "pydantic>=2.10.4",
    "structlog>=24.4.0",
    "click>=8.1.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
legacy-api = "legacy_api:main"
ionbeam-legacy-api = "legacy_api:main"
