[project]
name = "eumetnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ionbeam-client",
    "aiomqtt>=2.4.0",
    "pyyaml>=6.0.3",
    "click>=8.1.0",
]

[tool.uv.sources]
ionbeam-client = { workspace = true }

[project.scripts]
eumetnet = "eumetnet:main"